--- a/web/style.css
+++ b/web/style.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
     @apply overflow-hidden bg-white text-slate-800;
 }
 
